# deluge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
documentation/notes/: Investigations.md  Serialization and data.md
src/: kit.rs  lib.rs  sound.rs  synth.rs
src/card/: card_folder.rs  filesystem.rs  mod.rs  patch_name.rs  tests.rs
src/data_tests/KITS/: KIT002A.XML  KIT026A.XML  KIT030A.XML  KIT031A.XML  KIT057.XML  KIT_TEST_SOUNDS_MIDI_GATE.XML  KIT_TEST_SOUNDS_ONLY.XML  Synth Hats.XML  Test 5050.XML  Test KIT row selected.XML  Test Pan.XML  Test Reverb.XML  Test Sinc.XML
src/data_tests/SYNTHS/: SYNT002A.XML  SYNT004A.XML  SYNT008A.XML  SYNT028A.XML  SYNT061A.XML  SYNT168A.XML  SYNT173.XML  SYNT176.XML  SYNT184.XML  Test Reverb.XML  Test Volduck.XML
src/data_tests/Version conver/: SYNT002A.XML  SYNT039C.XML
src/data_tests/default/: KIT Default Test.XML  SYNTh Default.XML
src/kit/: mod.rs  row.rs
src/samples/: mod.rs  sample_path_replacer.rs
src/serialization/: default_params.rs  error.rs  format_version.rs  keys.rs  mod.rs  patch_type.rs  serialization_common.rs  version_detection.rs  version_info.rs  xml.rs
src/serialization/serialization_v1/: mod.rs
src/serialization/serialization_v2/: mod.rs
src/serialization/serialization_v3/: loading.rs  mod.rs  writing.rs
src/sound/: effects.rs  fm.rs  mod.rs  modulators.rs  ring_mod.rs  subtractive.rs
src/values/: decu50.rs  hexu50.rs  int8.rs  mod.rs  on_off.rs  pan.rs  retrig_phase.rs  sample_path.rs  sample_position.rs  sidechain_values.rs  simple_enums.rs  uint8.rs
src/wav/: metadata.rs  mod.rs
tests/: data_driven_tests.rs  serialization_tests.rs
tests/data_tests/: README.md
tests/data_tests/KITS/: Fmdrum.XML  KIT000A.XML  KIT041.XML  KIT043.XML  KIT043A.XML  KIT045.XML  KIT047.XML  KIT048.XML  KIT049.XML  KIT049A.XML  KIT050.XML  KIT052.XML  KIT055.XML  KIT056.XML  Test Arp Mode.XML  Test Filter Type Eq.XML  Test Filter Type HPF.XML  Test Filter Type LPF.XML  Test KIT no row selected.XML  Test Lfo Shape.XML  Test Phase.XML  Test Priority.XML  Test Sample Loop.XML  Test Sidechain.XML  Test Syncrate.XML  Test Waves.XML  Test50V.XML
tests/data_tests/SYNTHS/: Bass Grasse.XML  SYNT034.XML  SYNT039A.XML  SYNT165A.XML  SYNT171.XML  SYNT172.XML  SYNT174.XML  (+10 more)
(+65 files in other folders)
