[package]
name = "deluge"
version = "0.4.0"
description = "Load, edit and write Deluge synth and kit patches"
edition = "2021"

[dev-dependencies]
test-case = "2.0.0"
pretty_assertions = "1.2.0"
test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
mockall = "0.11.0"

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_plain = "1.0.0"
thiserror = "1.0.30"
xmltree = "0.10.3"
serde_repr = "0.1.7"
# strum is to iterate on the enum's values
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.0"
nom = { version = "7.1.1" }
enum-as-inner = "0.4.0"
# For join()
itertools = "0.10.3"
derive_builder = "0.11.2"
version-compare = "0.1.0"
