[package]
name = "deluge"
version = "0.1.0"
description = "Load, edit and write Deluge synth and kit patches"
edition = "2021"

[dev-dependencies]
test-case = "3.0.0"
pretty_assertions = "1.3.0"
test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
mockall = "0.11.3"

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_plain = "1.0.1"
thiserror = "1.0.38"
xmltree = "0.10.3"
serde_repr = "0.1.10"
# strum is to iterate on the enum's values
strum = { version = "0.24.1", features = ["derive"] }
nom = "7.1.2"
enum-as-inner = "0.6.0"
# For join()
itertools = "0.11.0"
derive_builder = "0.12.0"
version-compare = "0.1.1"
quick-xml = "0.29.0"
